deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoistmt
  labels:
    app: hoistmt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hoistmt
  template:
    metadata:
      labels:
        app: hoistmt
    spec:
      containers:
        - name: hoistmt
          image: kubdevacr.azurecr.io/hoistmt:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: acr-secret01
